[gd_scene load_steps=6 format=2]

[ext_resource path="res://Managers/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Robot_Loop.ogg" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Play1"
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayer1:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Play2"
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayer2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MusicPlayer1:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MusicPlayer2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "Music"

[node name="MusicPlayer2" type="AudioStreamPlayer" parent="."]

[node name="Transition" type="AnimationPlayer" parent="."]
anims/Play1 = SubResource( 1 )
anims/Play2 = SubResource( 4 )
anims/RESET = SubResource( 3 )

[connection signal="animation_finished" from="Transition" to="." method="_on_Tranistion_animation_finished"]
